@@ -1,9 +1,7 @@
 package net.simpleframework.lib.org.jsoup.parser;
 
-import java.util.Iterator;
-import java.util.LinkedList;
+import java.util.ArrayList;
 
-import net.simpleframework.lib.org.jsoup.helper.DescendableLinkedList;
 import net.simpleframework.lib.org.jsoup.helper.StringUtil;
 import net.simpleframework.lib.org.jsoup.nodes.Attribute;
 import net.simpleframework.lib.org.jsoup.nodes.Attributes;
@@ -69,7 +67,7 @@ enum HtmlTreeBuilderState {
 		}
 
 		private boolean anythingElse(final Token t, final HtmlTreeBuilder tb) {
-			tb.insert("html");
+			tb.insertStartTag("html");
 			tb.transition(BeforeHead);
 			return tb.process(t);
 		}
@@ -92,13 +90,13 @@ enum HtmlTreeBuilderState {
 				tb.transition(InHead);
 			} else if (t.isEndTag()
 					&& (StringUtil.in(t.asEndTag().name(), "head", "body", "html", "br"))) {
-				tb.process(new Token.StartTag("head"));
+				tb.processStartTag("head");
 				return tb.process(t);
 			} else if (t.isEndTag()) {
 				tb.error(this);
 				return false;
 			} else {
-				tb.process(new Token.StartTag("head"));
+				tb.processStartTag("head");
 				return tb.process(t);
 			}
 			return true;
@@ -175,7 +173,7 @@ enum HtmlTreeBuilderState {
 		}
 
 		private boolean anythingElse(final Token t, final TreeBuilder tb) {
-			tb.process(new Token.EndTag("head"));
+			tb.processEndTag("head");
 			return tb.process(t);
 		}
 	},
@@ -208,8 +206,8 @@ enum HtmlTreeBuilderState {
 
 		private boolean anythingElse(final Token t, final HtmlTreeBuilder tb) {
 			tb.error(this);
-			tb.process(new Token.EndTag("noscript"));
-			return tb.process(t);
+			tb.insert(new Token.Character().data(t.toString()));
+			return true;
 		}
 	},
 	AfterHead {
@@ -260,7 +258,7 @@ enum HtmlTreeBuilderState {
 		}
 
 		private boolean anythingElse(final Token t, final HtmlTreeBuilder tb) {
-			tb.process(new Token.StartTag("body"));
+			tb.processStartTag("body");
 			tb.framesetOk(true);
 			return tb.process(t);
 		}
@@ -302,7 +300,7 @@ enum HtmlTreeBuilderState {
 				if (name.equals("html")) {
 					tb.error(this);
 					// merge attributes onto real html
-					final Element html = tb.getStack().getFirst();
+					final Element html = tb.getStack().get(0);
 					for (final Attribute attribute : startTag.getAttributes()) {
 						if (!html.hasAttr(attribute.getKey())) {
 							html.attributes().put(attribute);
@@ -312,7 +310,7 @@ enum HtmlTreeBuilderState {
 					return tb.process(t, InHead);
 				} else if (name.equals("body")) {
 					tb.error(this);
-					final LinkedList<Element> stack = tb.getStack();
+					final ArrayList<Element> stack = tb.getStack();
 					if (stack.size() == 1
 							|| (stack.size() > 2 && !stack.get(1).nodeName().equals("body"))) {
 						// only in fragment case
@@ -328,7 +326,7 @@ enum HtmlTreeBuilderState {
 					}
 				} else if (name.equals("frameset")) {
 					tb.error(this);
-					final LinkedList<Element> stack = tb.getStack();
+					final ArrayList<Element> stack = tb.getStack();
 					if (stack.size() == 1
 							|| (stack.size() > 2 && !stack.get(1).nodeName().equals("body"))) {
 						// only in fragment case
@@ -342,19 +340,19 @@ enum HtmlTreeBuilderState {
 						}
 						// pop up to html element
 						while (stack.size() > 1) {
-							stack.removeLast();
+							stack.remove(stack.size() - 1);
 						}
 						tb.insert(startTag);
 						tb.transition(InFrameset);
 					}
 				} else if (StringUtil.in(name, Constants.InBodyStartPClosers)) {
 					if (tb.inButtonScope("p")) {
-						tb.process(new Token.EndTag("p"));
+						tb.processEndTag("p");
 					}
 					tb.insert(startTag);
 				} else if (StringUtil.in(name, Constants.Headings)) {
 					if (tb.inButtonScope("p")) {
-						tb.process(new Token.EndTag("p"));
+						tb.processEndTag("p");
 					}
 					if (StringUtil.in(tb.currentElement().nodeName(), Constants.Headings)) {
 						tb.error(this);
@@ -363,7 +361,7 @@ enum HtmlTreeBuilderState {
 					tb.insert(startTag);
 				} else if (StringUtil.in(name, Constants.InBodyStartPreListing)) {
 					if (tb.inButtonScope("p")) {
-						tb.process(new Token.EndTag("p"));
+						tb.processEndTag("p");
 					}
 					tb.insert(startTag);
 					// todo: ignore LF if next token
@@ -374,16 +372,16 @@ enum HtmlTreeBuilderState {
 						return false;
 					}
 					if (tb.inButtonScope("p")) {
-						tb.process(new Token.EndTag("p"));
+						tb.processEndTag("p");
 					}
 					tb.insertForm(startTag, true);
 				} else if (name.equals("li")) {
 					tb.framesetOk(false);
-					final LinkedList<Element> stack = tb.getStack();
+					final ArrayList<Element> stack = tb.getStack();
 					for (int i = stack.size() - 1; i > 0; i--) {
 						final Element el = stack.get(i);
 						if (el.nodeName().equals("li")) {
-							tb.process(new Token.EndTag("li"));
+							tb.processEndTag("li");
 							break;
 						}
 						if (tb.isSpecial(el)
@@ -392,16 +390,16 @@ enum HtmlTreeBuilderState {
 						}
 					}
 					if (tb.inButtonScope("p")) {
-						tb.process(new Token.EndTag("p"));
+						tb.processEndTag("p");
 					}
 					tb.insert(startTag);
 				} else if (StringUtil.in(name, Constants.DdDt)) {
 					tb.framesetOk(false);
-					final LinkedList<Element> stack = tb.getStack();
+					final ArrayList<Element> stack = tb.getStack();
 					for (int i = stack.size() - 1; i > 0; i--) {
 						final Element el = stack.get(i);
 						if (StringUtil.in(el.nodeName(), Constants.DdDt)) {
-							tb.process(new Token.EndTag(el.nodeName()));
+							tb.processEndTag(el.nodeName());
 							break;
 						}
 						if (tb.isSpecial(el)
@@ -410,12 +408,12 @@ enum HtmlTreeBuilderState {
 						}
 					}
 					if (tb.inButtonScope("p")) {
-						tb.process(new Token.EndTag("p"));
+						tb.processEndTag("p");
 					}
 					tb.insert(startTag);
 				} else if (name.equals("plaintext")) {
 					if (tb.inButtonScope("p")) {
-						tb.process(new Token.EndTag("p"));
+						tb.processEndTag("p");
 					}
 					tb.insert(startTag);
 					tb.tokeniser.transition(TokeniserState.PLAINTEXT); // once in,
@@ -425,7 +423,7 @@ enum HtmlTreeBuilderState {
 					if (tb.inButtonScope("button")) {
 						// close and reprocess
 						tb.error(this);
-						tb.process(new Token.EndTag("button"));
+						tb.processEndTag("button");
 						tb.process(startTag);
 					} else {
 						tb.reconstructFormattingElements();
@@ -435,7 +433,7 @@ enum HtmlTreeBuilderState {
 				} else if (name.equals("a")) {
 					if (tb.getActiveFormattingElement("a") != null) {
 						tb.error(this);
-						tb.process(new Token.EndTag("a"));
+						tb.processEndTag("a");
 
 						// still on stack?
 						final Element remainingA = tb.getFromStack("a");
@@ -455,7 +453,7 @@ enum HtmlTreeBuilderState {
 					tb.reconstructFormattingElements();
 					if (tb.inScope("nobr")) {
 						tb.error(this);
-						tb.process(new Token.EndTag("nobr"));
+						tb.processEndTag("nobr");
 						tb.reconstructFormattingElements();
 					}
 					final Element el = tb.insert(startTag);
@@ -468,7 +466,7 @@ enum HtmlTreeBuilderState {
 				} else if (name.equals("table")) {
 					if (tb.getDocument().quirksMode() != Document.QuirksMode.quirks
 							&& tb.inButtonScope("p")) {
-						tb.process(new Token.EndTag("p"));
+						tb.processEndTag("p");
 					}
 					tb.insert(startTag);
 					tb.framesetOk(false);
@@ -487,7 +485,7 @@ enum HtmlTreeBuilderState {
 					tb.insertEmpty(startTag);
 				} else if (name.equals("hr")) {
 					if (tb.inButtonScope("p")) {
-						tb.process(new Token.EndTag("p"));
+						tb.processEndTag("p");
 					}
 					tb.insertEmpty(startTag);
 					tb.framesetOk(false);
@@ -507,18 +505,18 @@ enum HtmlTreeBuilderState {
 					}
 
 					tb.tokeniser.acknowledgeSelfClosingFlag();
-					tb.process(new Token.StartTag("form"));
+					tb.processStartTag("form");
 					if (startTag.attributes.hasKey("action")) {
 						final Element form = tb.getFormElement();
 						form.attr("action", startTag.attributes.get("action"));
 					}
-					tb.process(new Token.StartTag("hr"));
-					tb.process(new Token.StartTag("label"));
+					tb.processStartTag("hr");
+					tb.processStartTag("label");
 					// hope you like english.
 					final String prompt = startTag.attributes.hasKey("prompt") ? startTag.attributes
 							.get("prompt") : "This is a searchable index. Enter search keywords: ";
 
-					tb.process(new Token.Character(prompt));
+					tb.process(new Token.Character().data(prompt));
 
 					// input
 					final Attributes inputAttribs = new Attributes();
@@ -528,10 +526,10 @@ enum HtmlTreeBuilderState {
 						}
 					}
 					inputAttribs.put("name", "isindex");
-					tb.process(new Token.StartTag("input", inputAttribs));
-					tb.process(new Token.EndTag("label"));
-					tb.process(new Token.StartTag("hr"));
-					tb.process(new Token.EndTag("form"));
+					tb.processStartTag("input", inputAttribs);
+					tb.processEndTag("label");
+					tb.processStartTag("hr");
+					tb.processEndTag("form");
 				} else if (name.equals("textarea")) {
 					tb.insert(startTag);
 					// todo: If the next token is a U+000A LINE FEED (LF) character
@@ -544,7 +542,7 @@ enum HtmlTreeBuilderState {
 					tb.transition(Text);
 				} else if (name.equals("xmp")) {
 					if (tb.inButtonScope("p")) {
-						tb.process(new Token.EndTag("p"));
+						tb.processEndTag("p");
 					}
 					tb.reconstructFormattingElements();
 					tb.framesetOk(false);
@@ -569,7 +567,7 @@ enum HtmlTreeBuilderState {
 					}
 				} else if (StringUtil.in(name, Constants.InBodyStartOptions)) {
 					if (tb.currentElement().nodeName().equals("option")) {
-						tb.process(new Token.EndTag("option"));
+						tb.processEndTag("option");
 					}
 					tb.reconstructFormattingElements();
 					tb.insert(startTag);
@@ -617,7 +615,7 @@ enum HtmlTreeBuilderState {
 						tb.transition(AfterBody);
 					}
 				} else if (name.equals("html")) {
-					final boolean notIgnored = tb.process(new Token.EndTag("body"));
+					final boolean notIgnored = tb.processEndTag("body");
 					if (notIgnored) {
 						return tb.process(endTag);
 					}
@@ -651,9 +649,8 @@ enum HtmlTreeBuilderState {
 				} else if (name.equals("p")) {
 					if (!tb.inButtonScope(name)) {
 						tb.error(this);
-						tb.process(new Token.StartTag(name)); // if no p to close,
-																			// creates an empty
-																			// <p></p>
+						tb.processStartTag(name); // if no p to close, creates an
+															// empty <p></p>
 						return tb.process(endTag);
 					} else {
 						tb.generateImpliedEndTags(name);
@@ -700,7 +697,7 @@ enum HtmlTreeBuilderState {
 					return anyOtherEndTag(t, tb);
 				} else if (StringUtil.in(name, Constants.InBodyEndAdoptionFormatters)) {
 					// Adoption Agency Algorithm.
-					OUTER: for (int i = 0; i < 8; i++) {
+					for (int i = 0; i < 8; i++) {
 						final Element formatEl = tb.getActiveFormattingElement(name);
 						if (formatEl == null) {
 							return anyOtherEndTag(t, tb);
@@ -718,7 +715,7 @@ enum HtmlTreeBuilderState {
 						Element furthestBlock = null;
 						Element commonAncestor = null;
 						boolean seenFormattingElement = false;
-						final LinkedList<Element> stack = tb.getStack();
+						final ArrayList<Element> stack = tb.getStack();
 						// the spec doesn't limit to < 64, but in degenerate cases
 						// (9000+ stack depth) this prevents
 						// run-aways
@@ -745,7 +742,7 @@ enum HtmlTreeBuilderState {
 						// does that mean: int pos of format el in list?
 						Element node = furthestBlock;
 						Element lastNode = furthestBlock;
-						INNER: for (int j = 0; j < 3; j++) {
+						for (int j = 0; j < 3; j++) {
 							if (tb.onStack(node)) {
 								node = tb.aboveOnStack(node);
 							}
@@ -753,9 +750,9 @@ enum HtmlTreeBuilderState {
 																							// bookmark
 																							// check
 								tb.removeFromStack(node);
-								continue INNER;
+								continue;
 							} else if (node == formatEl) {
-								break INNER;
+								break;
 							}
 
 							final Element replacement = new Element(Tag.valueOf(node.nodeName()),
@@ -823,7 +820,7 @@ enum HtmlTreeBuilderState {
 					}
 				} else if (name.equals("br")) {
 					tb.error(this);
-					tb.process(new Token.StartTag("br"));
+					tb.processStartTag("br");
 					return false;
 				} else {
 					return anyOtherEndTag(t, tb);
@@ -841,10 +838,9 @@ enum HtmlTreeBuilderState {
 
 		boolean anyOtherEndTag(final Token t, final HtmlTreeBuilder tb) {
 			final String name = t.asEndTag().name();
-			final DescendableLinkedList<Element> stack = tb.getStack();
-			final Iterator<Element> it = stack.descendingIterator();
-			while (it.hasNext()) {
-				final Element node = it.next();
+			final ArrayList<Element> stack = tb.getStack();
+			for (int pos = stack.size() - 1; pos >= 0; pos--) {
+				final Element node = stack.get(pos);
 				if (node.nodeName().equals(name)) {
 					tb.generateImpliedEndTags(name);
 					if (!name.equals(tb.currentElement().nodeName())) {
@@ -910,18 +906,18 @@ enum HtmlTreeBuilderState {
 					tb.insert(startTag);
 					tb.transition(InColumnGroup);
 				} else if (name.equals("col")) {
-					tb.process(new Token.StartTag("colgroup"));
+					tb.processStartTag("colgroup");
 					return tb.process(t);
 				} else if (StringUtil.in(name, "tbody", "tfoot", "thead")) {
 					tb.clearStackToTableContext();
 					tb.insert(startTag);
 					tb.transition(InTableBody);
 				} else if (StringUtil.in(name, "td", "th", "tr")) {
-					tb.process(new Token.StartTag("tbody"));
+					tb.processStartTag("tbody");
 					return tb.process(t);
 				} else if (name.equals("table")) {
 					tb.error(this);
-					final boolean processed = tb.process(new Token.EndTag("table"));
+					final boolean processed = tb.processEndTag("table");
 					if (processed) {
 						return tb.process(t);
 					}
@@ -976,7 +972,7 @@ enum HtmlTreeBuilderState {
 
 		boolean anythingElse(final Token t, final HtmlTreeBuilder tb) {
 			tb.error(this);
-			boolean processed = true;
+			boolean processed;
 			if (StringUtil
 					.in(tb.currentElement().nodeName(), "table", "tbody", "tfoot", "thead", "tr")) {
 				tb.setFosterInserts(true);
@@ -998,25 +994,27 @@ enum HtmlTreeBuilderState {
 					tb.error(this);
 					return false;
 				} else {
-					tb.getPendingTableCharacters().add(c);
+					tb.getPendingTableCharacters().add(c.getData());
 				}
 				break;
 			default:
+				// todo - don't really like the way these table character data lists
+				// are built
 				if (tb.getPendingTableCharacters().size() > 0) {
-					for (final Token.Character character : tb.getPendingTableCharacters()) {
+					for (final String character : tb.getPendingTableCharacters()) {
 						if (!isWhitespace(character)) {
 							// InTable anything else section:
 							tb.error(this);
 							if (StringUtil.in(tb.currentElement().nodeName(), "table", "tbody", "tfoot",
 									"thead", "tr")) {
 								tb.setFosterInserts(true);
-								tb.process(character, InBody);
+								tb.process(new Token.Character().data(character), InBody);
 								tb.setFosterInserts(false);
 							} else {
-								tb.process(character, InBody);
+								tb.process(new Token.Character().data(character), InBody);
 							}
 						} else {
-							tb.insert(character);
+							tb.insert(new Token.Character().data(character));
 						}
 					}
 					tb.newPendingTableCharacters();
@@ -1050,7 +1048,7 @@ enum HtmlTreeBuilderState {
 							"tfoot", "th", "thead", "tr") || t.isEndTag()
 					&& t.asEndTag().name().equals("table"))) {
 				tb.error(this);
-				final boolean processed = tb.process(new Token.EndTag("caption"));
+				final boolean processed = tb.processEndTag("caption");
 				if (processed) {
 					return tb.process(t);
 				}
@@ -1118,7 +1116,7 @@ enum HtmlTreeBuilderState {
 		}
 
 		private boolean anythingElse(final Token t, final TreeBuilder tb) {
-			final boolean processed = tb.process(new Token.EndTag("colgroup"));
+			final boolean processed = tb.processEndTag("colgroup");
 			if (processed) {
 				return tb.process(t);
 			}
@@ -1138,7 +1136,7 @@ enum HtmlTreeBuilderState {
 					tb.transition(InRow);
 				} else if (StringUtil.in(name, "th", "td")) {
 					tb.error(this);
-					tb.process(new Token.StartTag("tr"));
+					tb.processStartTag("tr");
 					return tb.process(startTag);
 				} else if (StringUtil.in(name, "caption", "col", "colgroup", "tbody", "tfoot", "thead")) {
 					return exitTableBody(t, tb);
@@ -1181,9 +1179,8 @@ enum HtmlTreeBuilderState {
 				return false;
 			}
 			tb.clearStackToTableBodyContext();
-			tb.process(new Token.EndTag(tb.currentElement().nodeName())); // tbody,
-																								// tfoot,
-																								// thead
+			tb.processEndTag(tb.currentElement().nodeName()); // tbody, tfoot,
+																				// thead
 			return tb.process(t);
 		}
 
@@ -1228,7 +1225,7 @@ enum HtmlTreeBuilderState {
 						tb.error(this);
 						return false;
 					}
-					tb.process(new Token.EndTag("tr"));
+					tb.processEndTag("tr");
 					return tb.process(t);
 				} else if (StringUtil
 						.in(name, "body", "caption", "col", "colgroup", "html", "td", "th")) {
@@ -1248,7 +1245,7 @@ enum HtmlTreeBuilderState {
 		}
 
 		private boolean handleMissingTr(final Token t, final TreeBuilder tb) {
-			final boolean processed = tb.process(new Token.EndTag("tr"));
+			final boolean processed = tb.processEndTag("tr");
 			if (processed) {
 				return tb.process(t);
 			} else {
@@ -1311,10 +1308,9 @@ enum HtmlTreeBuilderState {
 
 		private void closeCell(final HtmlTreeBuilder tb) {
 			if (tb.inTableScope("td")) {
-				tb.process(new Token.EndTag("td"));
+				tb.processEndTag("td");
 			} else {
-				tb.process(new Token.EndTag("th")); // only here if th or td in
-																// scope
+				tb.processEndTag("th"); // only here if th or td in scope
 			}
 		}
 	},
@@ -1343,24 +1339,24 @@ enum HtmlTreeBuilderState {
 				if (name.equals("html")) {
 					return tb.process(start, InBody);
 				} else if (name.equals("option")) {
-					tb.process(new Token.EndTag("option"));
+					tb.processEndTag("option");
 					tb.insert(start);
 				} else if (name.equals("optgroup")) {
 					if (tb.currentElement().nodeName().equals("option")) {
-						tb.process(new Token.EndTag("option"));
+						tb.processEndTag("option");
 					} else if (tb.currentElement().nodeName().equals("optgroup")) {
-						tb.process(new Token.EndTag("optgroup"));
+						tb.processEndTag("optgroup");
 					}
 					tb.insert(start);
 				} else if (name.equals("select")) {
 					tb.error(this);
-					return tb.process(new Token.EndTag("select"));
+					return tb.processEndTag("select");
 				} else if (StringUtil.in(name, "input", "keygen", "textarea")) {
 					tb.error(this);
 					if (!tb.inSelectScope("select")) {
 						return false; // frag
 					}
-					tb.process(new Token.EndTag("select"));
+					tb.processEndTag("select");
 					return tb.process(start);
 				} else if (name.equals("script")) {
 					return tb.process(t, InHead);
@@ -1375,7 +1371,7 @@ enum HtmlTreeBuilderState {
 					if (tb.currentElement().nodeName().equals("option")
 							&& tb.aboveOnStack(tb.currentElement()) != null
 							&& tb.aboveOnStack(tb.currentElement()).nodeName().equals("optgroup")) {
-						tb.process(new Token.EndTag("option"));
+						tb.processEndTag("option");
 					}
 					if (tb.currentElement().nodeName().equals("optgroup")) {
 						tb.pop();
@@ -1423,14 +1419,14 @@ enum HtmlTreeBuilderState {
 					&& StringUtil.in(t.asStartTag().name(), "caption", "table", "tbody", "tfoot",
 							"thead", "tr", "td", "th")) {
 				tb.error(this);
-				tb.process(new Token.EndTag("select"));
+				tb.processEndTag("select");
 				return tb.process(t);
 			} else if (t.isEndTag()
 					&& StringUtil.in(t.asEndTag().name(), "caption", "table", "tbody", "tfoot", "thead",
 							"tr", "td", "th")) {
 				tb.error(this);
 				if (tb.inTableScope(t.asEndTag().name())) {
-					tb.process(new Token.EndTag("select"));
+					tb.processEndTag("select");
 					return (tb.process(t));
 				} else {
 					return false;
@@ -1593,16 +1589,20 @@ enum HtmlTreeBuilderState {
 	private static boolean isWhitespace(final Token t) {
 		if (t.isCharacter()) {
 			final String data = t.asCharacter().getData();
-			// todo: this checks more than spec - "\t", "\n", "\f", "\r", " "
-			for (int i = 0; i < data.length(); i++) {
-				final char c = data.charAt(i);
-				if (!StringUtil.isWhitespace(c)) {
-					return false;
-				}
-			}
-			return true;
+			return isWhitespace(data);
 		}
 		return false;
+	}
+
+	private static boolean isWhitespace(final String data) {
+		// todo: this checks more than spec - "\t", "\n", "\f", "\r", " "
+		for (int i = 0; i < data.length(); i++) {
+			final char c = data.charAt(i);
+			if (!StringUtil.isWhitespace(c)) {
+				return false;
+			}
+		}
+		return true;
 	}
 
 	private static void handleRcData(final Token.StartTag startTag, final HtmlTreeBuilder tb) {
